force-app/main/default/objects/Vehicle__c/fields/Plate__c.field-meta.xml
<CustomField>
    <fullName>Plate__c</fullName>
    <description>Registration plate</description>
    <label>Plate</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>