force-app/main/default/objects/Vehicle__c/fields/Registration_Country__c.field-meta.xml
<CustomField>
    <fullName>Registration_Country__c</fullName>
    <label>Registration Country</label>
    <type>Address</type>
</CustomField>