force-app/main/default/objects/Vehicle__c/validationRules/VIN_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VIN_validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &lt;&gt; 17</errorConditionFormula>
    <errorMessage>VIN number must be exactly 17 characters.</errorMessage>
</ValidationRule>