force-app/main/default/objects/Vehicle__c/validationRules/Year_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Year__c &gt; YEAR(TODAY())</errorConditionFormula>
    <errorMessage>Vehicle production year cannot be in the future.</errorMessage>
</ValidationRule>