force-app/main/default/objects/Vehicle__c/listViews/All_Vehicles_Service.listView-meta.xml
<ListView>
    <fullName>All_Vehicles_Service</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Vehicles – Service</label>
</ListView>